--- a/2_openai/4ifrog/lesson3.ipynb
+++ b/2_openai/4ifrog/lesson3.ipynb
@@ -1,6 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4908fbc0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from openai import OpenAI\n",
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "from IPython.display import Markdown, display\n",
+    "\n",
+    "load_dotenv(override=True)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "adf4f9aa",
    "metadata": {},
@@ -10,43 +25,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "2b4f8de4",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "From gpt-4.1-nano: Meiosis is a cell division process that reduces the chromosome number by half to produce gametes, while mitosis results in two genetically identical diploid daughter cells for growth and repair."
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "From deepseek-chat: Mitosis produces two genetically identical diploid cells for growth and repair, while meiosis creates four genetically unique haploid cells specifically for sexual reproduction."
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from openai import OpenAI\n",
-    "import os\n",
-    "from dotenv import load_dotenv\n",
-    "from IPython.display import Markdown, display\n",
-    "\n",
-    "load_dotenv(override=True)\n",
-    "\n",
     "messages = [{\"role\":\"user\", \"content\":\"Give me 1 sentence differentiating between meiosis and mitosis.\"}]\n",
     "\n",
     "# OpenAI\n",
@@ -78,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "772d86f8",
    "metadata": {},
    "outputs": [],
@@ -90,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "9e73b53f",
    "metadata": {},
    "outputs": [],
@@ -102,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "ca1b9547",
    "metadata": {},
    "outputs": [],
@@ -114,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "80a50632",
    "metadata": {},
    "outputs": [],
@@ -128,30 +111,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "694785a7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Error getting response: Error code: 404 - {'error_msg': 'Not Found. Please check the configuration.'}. (request_id: None)\n",
-      "Error getting response: Error code: 404 - {'error_msg': 'Not Found. Please check the configuration.'}. (request_id: None)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "I encountered an issue while trying to retrieve the answers. However, I can provide you with the answers:\n",
-      "\n",
-      "**Art Question:** The development of linear perspective during the Renaissance allowed artists to create the illusion of depth on a flat surface, making their paintings more realistic. It introduced a systematic way to depict spatial relationships and scale, revolutionizing visual representation and influencing countless artists and artworks.\n",
-      "\n",
-      "**Science Question:** Photosynthesis converts light energy into chemical energy through a process that occurs in two main stages: the light-dependent reactions and the Calvin cycle. In the first stage, light energy is absorbed by chlorophyll and used to split water molecules, releasing oxygen and producing ATP and NADPH. In the second stage, these energy carriers help convert carbon dioxide into glucose, storing chemical energy for the plant.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "lecturer_instructions = \"\"\"\n",
     "You give a question and answer. Your goal is to select\n",
