--- a/2_openai/4ifrog/lesson4.ipynb
+++ b/2_openai/4ifrog/lesson4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "e3003b11",
    "metadata": {},
    "outputs": [],
@@ -10,7 +10,12 @@
     "import os\n",
     "from dotenv import load_dotenv\n",
     "\n",
-    "from agents import Agent, WebSearchTool"
+    "from agents import Agent, WebSearchTool\n",
+    "from agents import ModelSettings, trace, Runner\n",
+    "\n",
+    "from pydantic import BaseModel, Field\n",
+    "\n",
+    "from IPython.display import display, Markdown"
    ]
   },
   {
@@ -20,11 +25,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dis import Instruction\n",
-    "\n",
-    "from agents import ModelSettings\n",
-    "\n",
-    "\n",
     "load_dotenv(override=True)\n",
     "\n",
     "INSTRUCTIONS = \"You are a research assistant. Given a search term, you search the web for that term and \\\n",
@@ -37,7 +37,7 @@
     "    name=\"Search agent\",\n",
     "    instructions=INSTRUCTIONS,\n",
     "    tools=[WebSearchTool(search_context_size=\"low\")],\n",
-    "    model='gpt-4.1-nano',\n",
+    "    model='gpt-4o-mini',\n",
     "    model_settings=ModelSettings(tool_choice=\"required\")\n",
     ")"
    ]
@@ -46,6 +46,96 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "593300a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "message = \"Latest battery technology in 2025\"\n",
+    "\n",
+    "with trace(\"Search Battery Technology\"):\n",
+    "    result = await Runner.run(starting_agent=search_agent, input=message)\n",
+    "\n",
+    "display(Markdown(result.final_output))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb1edcad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# WebSearchPlanner\n",
+    "HOW_MANY_SEARCHES = 3\n",
+    "\n",
+    "INSTRUCTIONS = f\"You are a helpful research assistant. Given a query, come up with a set of web searches \\\n",
+    "    to perform to best answer the query. Output {HOW_MANY_SEARCHES} terms to query for.\"\n",
+    "\n",
+    "class WebSearchField(BaseModel):\n",
+    "    reason: str = Field(description=\"Your reasoning for why this search is important to the query.\")\n",
+    "    query: str = Field(description=\"The search term to use fo the web search.\")\n",
+    "\n",
+    "class WebSearchPlan(BaseModel):\n",
+    "    searches: list[WebSearchField] = Field(description = \"A list of web searches to perform to best answer the query.\")\n",
+    "\n",
+    "planner_agent = Agent(\n",
+    "    name=\"Planner Agent\",\n",
+    "    instructions=INSTRUCTIONS,\n",
+    "    model=\"gpt-4o-mini\",\n",
+    "    output_type=WebSearchPlan\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45352810",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[non-fatal] Tracing: request failed: [SSL: CERTIFICATE_VERIFY_FAILED] certificate verify failed: self-signed certificate in certificate chain (_ssl.c:1000)\n",
+      "[non-fatal] Tracing: max retries reached, giving up on this batch.\n"
+     ]
+    }
+   ],
+   "source": [
+    "message = \"Latest battery technology in 2025\"\n",
+    "\n",
+    "with trace(\"Search Battery Technology II\"):\n",
+    "    result = await Runner.run(starting_agent=planner_agent, input=message)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b38601f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result.final_output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d4277b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result.final_output.searches[0].reason\n",
+    "\n",
+    "for result in result.final_output.searches:\n",
+    "    print(f\"Reason: {result.reason}\")\n",
+    "    print(f\"Query: {result.query}\")\n",
+    "    print(\"\\n\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab424cdd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -67,7 +157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
